--- a/css/style.css
+++ b/css/style.css
@@ -3795,7 +3795,7 @@ body.ie ._ibg img {
     display: flex;
   }
 
-  .header__icons span:not(:last-child) {
+  .header__icons a:not(:last-child) {
     margin: 0px 30px 0px 0px;
   }
 
@@ -4127,7 +4127,7 @@ body.ie ._ibg img {
             justify-content: flex-end;
   }
 
-  .header__icons span:not(:last-child) {
+  .header__icons a:not(:last-child) {
     margin: 0px 15px 50px 0px;
   }
 
