--- a/css/style.css
+++ b/css/style.css
@@ -206,6 +206,12 @@ body._lock {
   overflow: hidden;
 }
 
+body._scroll-down .header:not(.header_2) {
+  -webkit-transform: translate(0%, calc(-100% - 5px));
+      -ms-transform: translate(0%, calc(-100% - 5px));
+          transform: translate(0%, calc(-100% - 5px));
+}
+
 .wrapper {
   width: 100%;
   min-height: 100%;
@@ -245,9 +251,11 @@ body._lock {
   border: 2px solid #D2D2D2;
   border-radius: 66px;
   padding: 0px 0px;
-  -webkit-transition: border-color 0.2s ease 0s, background-color 0.2s ease 0s;
-  -o-transition: border-color 0.2s ease 0s, background-color 0.2s ease 0s;
-  transition: border-color 0.2s ease 0s, background-color 0.2s ease 0s;
+  -webkit-transition: border-color 0.2s ease 0s, background-color 0.2s ease 0s, -webkit-box-shadow 0.2s ease 0s;
+  transition: border-color 0.2s ease 0s, background-color 0.2s ease 0s, -webkit-box-shadow 0.2s ease 0s;
+  -o-transition: border-color 0.2s ease 0s, background-color 0.2s ease 0s, box-shadow 0.2s ease 0s;
+  transition: border-color 0.2s ease 0s, background-color 0.2s ease 0s, box-shadow 0.2s ease 0s;
+  transition: border-color 0.2s ease 0s, background-color 0.2s ease 0s, box-shadow 0.2s ease 0s, -webkit-box-shadow 0.2s ease 0s;
 }
 
 .button._fw {
@@ -1317,6 +1325,7 @@ body.ie ._ibg img {
 
 .header_2__bottom-block {
   position: absolute;
+  z-index: 2;
   bottom: 0;
   left: 0;
   width: 100%;
@@ -1366,6 +1375,11 @@ body.ie ._ibg img {
 
 .menu__body._active {
   right: 0;
+  visibility: visible;
+  opacity: 1;
+}
+
+.menu__body._active::before {
   visibility: visible;
   opacity: 1;
 }
@@ -1883,7 +1897,7 @@ body.ie ._ibg img {
   font-size: 400px;
   -webkit-filter: blur(2px);
           filter: blur(2px);
-  color: rgba(146, 182, 154, 0.3);
+  color: rgba(146, 182, 154, 0.15);
   max-width: 400px;
   max-height: 400px;
 }
@@ -1945,6 +1959,18 @@ body.ie ._ibg img {
 .parallax {
   height: 280px;
   width: 100%;
+  position: relative;
+}
+
+.parallax::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: 2;
+  background-color: rgba(255, 255, 255, 0.2);
 }
 
 .catalog__container-swiper {
@@ -1996,25 +2022,6 @@ body.ie ._ibg img {
       -ms-flex: 0 1 25%;
           flex: 0 1 25%;
   padding: 10px;
-}
-
-.tabs-catalog__card {
-  -webkit-box-flex: 1;
-      -ms-flex: 1 1 auto;
-          flex: 1 1 auto;
-  position: relative;
-  background-color: #fff;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  padding: 0 10px 10px;
-  border-radius: 20px;
-  -webkit-box-shadow: 0px 0px 10px 5px rgba(237, 237, 237, 0.7);
-          box-shadow: 0px 0px 10px 5px rgba(237, 237, 237, 0.7);
 }
 
 .tabs-catalog__arrow-swiper {
@@ -2146,7 +2153,7 @@ body.ie ._ibg img {
       -ms-flex-align: center;
           align-items: center;
   height: 210px;
-  border: 3px solid #92b69a;
+  border: 3px solid #D2D2D2;
   border-radius: 20px;
   padding: 20px 20px 10px;
   background-color: #fff;
@@ -2160,7 +2167,7 @@ body.ie ._ibg img {
 .nav-catalog__item._active {
   -webkit-box-shadow: 0px 0px 20px 20px rgba(210, 244, 217, 0.58);
           box-shadow: 0px 0px 20px 20px rgba(210, 244, 217, 0.58);
-  border-color: #648978;
+  border-color: #92B69A;
 }
 
 .nav-catalog__image {
@@ -2207,6 +2214,25 @@ body.ie ._ibg img {
   -webkit-transition: opacity 0.2s ease 0s;
   -o-transition: opacity 0.2s ease 0s;
   transition: opacity 0.2s ease 0s;
+}
+
+.card-catalog {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  position: relative;
+  background-color: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 0 10px 10px;
+  border-radius: 20px;
+  -webkit-box-shadow: 0px 0px 10px 5px rgba(237, 237, 237, 0.7);
+          box-shadow: 0px 0px 10px 5px rgba(237, 237, 237, 0.7);
 }
 
 .card-catalog__image {
@@ -2351,7 +2377,6 @@ body.ie ._ibg img {
 
 .card-catalog__btn {
   text-align: center;
-  font-weight: 300;
   color: #484848;
   border: 3px solid #92b69a;
   border-radius: 66px;
@@ -3492,8 +3517,8 @@ body.ie ._ibg img {
   width: 460px;
   height: 62px;
   border: 2px solid #c7b28a;
-  -webkit-box-shadow: 0px 0px 20px 20px rgba(237, 237, 237, 0.7);
-          box-shadow: 0px 0px 20px 20px rgba(237, 237, 237, 0.7);
+  -webkit-box-shadow: 0px 0px 10px 5px rgba(237, 237, 237, 0.7);
+          box-shadow: 0px 0px 10px 5px rgba(237, 237, 237, 0.7);
   border-radius: 15px;
   margin: 20px 10px;
   padding: 0 20px;
@@ -3597,10 +3622,9 @@ body.ie ._ibg img {
 
 .main-block__body-card {
   -webkit-box-flex: 0;
-      -ms-flex: 0 0 63.4920634921;
-          flex: 0 0 63.4920634921;
+      -ms-flex: 0 0 63.4920634921%;
+          flex: 0 0 63.4920634921%;
   min-width: 0;
-  padding-right: 20px;
 }
 
 .main-block__text {
@@ -3638,13 +3662,23 @@ body.ie ._ibg img {
   border-radius: 40px;
 }
 
+.card-product__sliders {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 62.5%;
+          flex: 0 0 62.5%;
+  min-width: 0;
+}
+
 .card-product__small-image {
   position: relative;
   z-index: 2;
   margin-right: 15px;
   -webkit-box-flex: 0;
-      -ms-flex: 0 0 13.8888888889%;
-          flex: 0 0 13.8888888889%;
+      -ms-flex: 0 0 22.222%;
+          flex: 0 0 22.222%;
 }
 
 .card-product__small-slide {
@@ -3672,9 +3706,9 @@ body.ie ._ibg img {
 .card-product__main-image {
   position: relative;
   z-index: 2;
-  -webkit-box-flex: 0;
-      -ms-flex: 0 1 335px;
-          flex: 0 1 335px;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
   border-radius: 20px;
   overflow: hidden;
   margin-right: 32px;
@@ -3757,6 +3791,40 @@ body.ie ._ibg img {
   opacity: 1;
 }
 
+.product-interesting__title-block {
+  margin-bottom: 40px;
+}
+
+.product-interesting__title::after {
+  -webkit-transform: rotate(-2.71deg);
+      -ms-transform: rotate(-2.71deg);
+          transform: rotate(-2.71deg);
+}
+
+.product-interesting__body {
+  padding: 20px 10px;
+  margin: -20px -10px;
+}
+
+.product-interesting__column {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.product-interesting__bottom-block {
+  text-align: center;
+  margin-top: 60px;
+}
+
+.product-interesting__link {
+  height: 51px;
+  font-size: 24px;
+  color: #fff;
+  font-weight: 300;
+  padding: 0 15px;
+}
+
 .page {
   -webkit-box-flex: 1;
       -ms-flex: 1 1 auto;
@@ -3808,7 +3876,11 @@ body.ie ._ibg img {
 }
 
 .page__product {
-  padding: 228px 0 15px;
+  padding: 228px 0 20px;
+}
+
+.page__interesting-product {
+  padding: 20px 0;
 }
 
 @media (min-width: 479.98px) {
@@ -3848,6 +3920,10 @@ body.ie ._ibg img {
     height: 500px;
     border-radius: 50%;
     z-index: 0;
+  }
+
+  .product-interesting__link {
+    min-width: 305px;
   }
 }
 
@@ -3900,6 +3976,10 @@ body.ie ._ibg img {
   .delivery__br-992 {
     display: none;
   }
+
+  .main-block__body-card {
+    padding-right: 20px;
+  }
 }
 
 @media (min-width: 992px) {
@@ -3946,6 +4026,16 @@ body.ie ._ibg img {
 
   .menu__item_col2:not(:last-child) {
     margin: 0px 44px 0px 0px;
+  }
+}
+
+@media (min-width: 1170px) {
+  .product-interesting__body {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
   }
 }
 
@@ -4178,6 +4268,10 @@ body.ie ._ibg img {
   .result-sum-basket__btn {
     font-size: calc(22px + 2 * ((100vw - 320px) / 970));
   }
+
+  .product-interesting__bottom-block {
+    margin-top: calc(20px + 40 * ((100vw - 320px) / 970));
+  }
 }
 
 @media (max-width: 1255px) {
@@ -4215,6 +4309,8 @@ body.ie ._ibg img {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
+    position: relative;
+    z-index: 4;
   }
 
   .header__icons {
@@ -4231,10 +4327,6 @@ body.ie ._ibg img {
     padding: 121px 0 0;
   }
 
-  .header._scroll .menu__body::before {
-    top: 121px;
-  }
-
   .menu__body {
     overflow: auto;
     position: fixed;
@@ -4244,23 +4336,33 @@ body.ie ._ibg img {
     height: 100%;
     right: -100%;
     visibility: hidden;
+    background-color: #fff;
     opacity: 0;
-    -webkit-transition: all 0.5s ease 0s;
-    -o-transition: all 0.5s ease 0s;
-    transition: all 0.5s ease 0s;
+    -webkit-transition: right 0.5s ease 0s, opacity 0.5s ease 0s, visibility 0.5s ease 0s;
+    -o-transition: right 0.5s ease 0s, opacity 0.5s ease 0s, visibility 0.5s ease 0s;
+    transition: right 0.5s ease 0s, opacity 0.5s ease 0s, visibility 0.5s ease 0s;
     padding: 180px 0px 0px 0px;
   }
 
   .menu__body::before {
     position: fixed;
-    top: 180px;
+    top: 0;
     right: 0;
-    z-index: 1;
+    z-index: 3;
     content: "";
-    background-color: rgba(255, 255, 255, 0.9);
+    background-color: #fff;
     display: block;
-    width: 50%;
-    height: 100%;
+    width: 100%;
+    height: 182px;
+    opacity: 0;
+    visibility: hidden;
+    -webkit-transition: opacity 0.5s ease 0s, visibility 0.5s ease 0s;
+    -o-transition: opacity 0.5s ease 0s, visibility 0.5s ease 0s;
+    transition: opacity 0.5s ease 0s, visibility 0.5s ease 0s;
+  }
+
+  ._scroll .menu__body::before {
+    height: 123px;
   }
 
   .menu__list {
@@ -4552,12 +4654,6 @@ body.ie ._ibg img {
     height: 514px;
   }
 
-  .card-product__main-image {
-    -webkit-box-flex: 0;
-        -ms-flex: 0 1 412px;
-            flex: 0 1 412px;
-  }
-
   .page__benefits {
     padding: 80px 0 50px;
   }
@@ -4585,6 +4681,14 @@ body.ie ._ibg img {
   .page__contacts {
     padding: 50px 0;
   }
+
+  .page__product {
+    padding: 228px 0 30px;
+  }
+
+  .page__interesting-product {
+    padding: 30px 0;
+  }
 }
 
 @media (max-width: 900px) {
@@ -4597,16 +4701,13 @@ body.ie ._ibg img {
 
 @media (max-width: 892px) {
   .card-product__small-image {
-    height: calc(378px + 136 * ((100vw - 768px) / (892 - 768)));
+    height: calc(388px + 126 * ((100vw - 768px) / (892 - 768)));
     -webkit-box-flex: 0;
         -ms-flex: 0 0 calc(95px + 28 * ((100vw - 768px) / (892 - 768)));
             flex: 0 0 calc(95px + 28 * ((100vw - 768px) / (892 - 768)));
   }
 
   .card-product__main-image {
-    -webkit-box-flex: 0;
-        -ms-flex: 0 1 calc(312px + 102 * ((100vw - 768px) / (892 - 768)));
-            flex: 0 1 calc(312px + 102 * ((100vw - 768px) / (892 - 768)));
     margin-right: 30px;
   }
 }
@@ -4635,10 +4736,6 @@ body.ie ._ibg img {
     padding-top: 131px;
   }
 
-  .header._scroll .menu__body::before {
-    top: 131px;
-  }
-
   .header_2__bottom-container {
     margin: 30px auto 0;
   }
@@ -4652,18 +4749,11 @@ body.ie ._ibg img {
   }
 
   .menu__body::before {
-    top: 130px;
+    height: 132px;
   }
 
-  .menu__body::after {
-    content: "";
-    background-color: #fff;
-    width: 100%;
+  ._scroll .menu__body::before {
     height: 132px;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 3;
   }
 
   .mainscreen__main-body {
@@ -4696,15 +4786,6 @@ body.ie ._ibg img {
   .menu__body {
     padding-top: 132px;
     width: 60%;
-  }
-
-  .menu__body::before {
-    top: 132px;
-    width: 60%;
-  }
-
-  .menu__body::after {
-    height: 132px;
   }
 
   .footer {
@@ -5039,20 +5120,49 @@ body.ie ._ibg img {
 
 @media (max-width: 680px) {
   .card-product {
+    max-height: none;
+    min-height: auto;
+  }
+
+  .card-product__sliders {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    margin-right: 15px;
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 55%;
+            flex: 0 1 55%;
+  }
+
+  .card-product__small-image {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+    height: auto;
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 auto;
+            flex: 0 1 auto;
+    margin: 0;
+  }
+
+  .card-product__small-slide {
+    padding-bottom: 26.64%;
   }
 
   .card-product__main-image {
-    -webkit-box-flex: 1;
-        -ms-flex: 1 1 100%;
-            flex: 1 1 100%;
+    margin: 0px 0px 10px 0px;
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
   }
 
   .card-product__slide {
-    padding-bottom: 50%;
+    padding-bottom: 121.2%;
+  }
+
+  .card-product__bottom-block {
+    margin-top: 33px;
   }
 }
 
@@ -5074,7 +5184,7 @@ body.ie ._ibg img {
   }
 
   .page__product {
-    padding: 228px 0 15px;
+    padding: 228px 0 20px;
   }
 }
 
@@ -5190,6 +5300,50 @@ body.ie ._ibg img {
 
   .card-basket__name {
     margin-bottom: 7px;
+  }
+
+  .card-product {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+
+  .card-product__sliders {
+    margin-right: 0;
+  }
+
+  .card-product__small-image {
+    margin: 0 0 20px 0;
+  }
+
+  .card-product__slide {
+    padding-bottom: 106.48%;
+  }
+
+  .card-product__central-block {
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+
+  .card-product__price-quantity-block {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+
+  .card-product__name,
+  .card-product__size {
+    margin-bottom: calc(20px + 10 * ((100vw - 480px) / (680 - 480)));
+  }
+
+  .card-product__price {
+    margin: 0;
   }
 }
 
@@ -5332,10 +5486,6 @@ body.ie ._ibg img {
     padding-top: 126px;
   }
 
-  .header._scroll .menu__body::before {
-    top: 0px;
-  }
-
   .header_2__bottom-container {
     margin: 10px auto 0;
   }
@@ -5361,13 +5511,11 @@ body.ie ._ibg img {
   }
 
   .menu__body::before {
-    position: fixed;
-    top: 0;
-    width: 100%;
+    height: calc(102px + 30 * ((100vw - 320px) / (480 - 320)));
   }
 
-  .menu__body::after {
-    height: 126px;
+  ._scroll .menu__body::before {
+    height: calc(102px + 30 * ((100vw - 320px) / (480 - 320)));
   }
 
   .footer {
@@ -5569,8 +5717,30 @@ body.ie ._ibg img {
     width: 100%;
   }
 
+  .main-block__body-card {
+    margin: 0 -15px;
+  }
+
   .card-product {
+    padding: 20px;
     margin-bottom: 30px;
+  }
+
+  .card-product__small-slide {
+    padding-bottom: 46.64%;
+  }
+
+  .card-product__bottom-block {
+    margin-top: 33px;
+  }
+
+  .card-product__name,
+  .card-product__size {
+    margin-bottom: 20px;
+  }
+
+  .product-interesting__title-block {
+    text-align: center;
   }
 
   .page__benefits {
@@ -5614,7 +5784,7 @@ body.ie ._ibg img {
   }
 
   .page__product {
-    padding: calc(202px + 70 * ((100vw - 320px) / (480 - 320))) 0 15px;
+    padding: calc(202px + 70 * ((100vw - 320px) / (480 - 320))) 0 20px;
   }
 }
 
@@ -5648,19 +5818,11 @@ body.ie ._ibg img {
   }
 }
 
-@media (max-height: 475px) {
-  body._scroll-down .header {
-    top: -100%;
-  }
-
-  body._scroll-up .header {
-    top: 0;
-  }
-}
-
 @media (any-hover: hover) {
   .button:hover {
     border-color: #45594F;
+    -webkit-box-shadow: 0px 6px 15px rgba(134, 163, 140, 0.6);
+            box-shadow: 0px 6px 15px rgba(134, 163, 140, 0.6);
   }
 
   .button:hover::before,
